@@ -24,6 +24,8 @@
     - Export filter "tablerefsandbib" updated to contain links to files and notes 
       (patch 2787096 by Thomas Arildsen).
     - "of" added to the list of skip words (patch 2781830).
+    - Added cli-function for exporting entries filtered by a search term 
+      (patch 1817093 by Silberer, Zirn)
     - Switched from PDFBox 0.7.3 to PDFBox 1.6.0.
 2.7.1
     - DocBook export format switched to 4.4 (based on patch 3313898).
